<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rylesolutions.flightforecast.MainActivity"
    android:background="#d8d8d8"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tInfoLabel"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_marginBottom="15dp"/>
    <Button
        android:id="@+id/takeoff_date_button"
        android:textColor="#333333"
        android:background="#d8d8d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeoff_date"
        android:onClick="SetTakeoffDate"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_gravity="end" />

    <Button
        android:id="@+id/takeoff_time_button"
        android:textColor="#333333"
        android:background="#d8d8d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeoff_time"
        android:onClick="SetTakeoffTime"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="start" />
    <Spinner
        android:id="@+id/t_state_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <Spinner
        android:id="@+id/t_city_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lInfoLabel"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/landing_date_button"
        android:textColor="#333333"
        android:background="#d8d8d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_date"
        android:onClick="SetLandingDate"
        android:layout_column="0"
        android:layout_row="5"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_gravity="end" />

    <Button
        android:id="@+id/landing_time_button"
        android:textColor="#333333"
        android:background="#d8d8d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_time"
        android:onClick="SetLandingTime"
        android:layout_column="1"
        android:layout_row="5"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="5dp"
        android:layout_gravity="start" />

    <Spinner
        android:id="@+id/l_state_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/l_city_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="7"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/search_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="#3f51b5"
        android:textColor="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:onClick="doSearch"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_gravity="bottom"
        android:layout_row="8" />


</GridLayout>
