<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".SearchResults"
    android:background="#d8d8d8"
    android:textColor="#333333">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tLabel"
        android:adjustViewBounds="true"
        android:id="@+id/tLabel"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:textColor="#333333"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tWeatherIcon"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_rowSpan="2"
        android:adjustViewBounds="true"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tTemperature"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:layout_column="1"
        android:layout_row="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tCondition"
        android:adjustViewBounds="true"
        android:layout_column="1"
        android:layout_row="2"
        android:ellipsize="end"
        android:textColor="#333333"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lLabel"
        android:id="@+id/lLabel"
        android:adjustViewBounds="true"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:textColor="#333333"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lWeatherIcon"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_rowSpan="2"
        android:adjustViewBounds="true"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/lTemperature"
        android:layout_marginTop="50dp"
        android:layout_column="1"
        android:layout_row="4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:adjustViewBounds="true"
        android:id="@+id/lCondition"
        android:layout_column="1"
        android:layout_row="5"
        android:ellipsize="end"
        android:textColor="#333333" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:adjustViewBounds="true"
        android:text="@string/dLabel"
        android:id="@+id/dLabel"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="6"
        android:textColor="#333333"
        android:layout_marginBottom="10dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dGauge"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="7"
        android:adjustViewBounds="true"
        android:layout_marginEnd="16dp" />

</GridLayout>
